<resources>
    <string name="app_name">密书</string>
    <string name="read_liscence">我已阅读并同意上述《最终用户许可协议》</string>
    <string name="ok">确定</string>

    <string name="navigation_pass">密码</string>
    <string name="navigation_synchronous_up">同步到云端</string>
    <string name="navigation_synchronous_down">下载云端记录</string>
    <string name="navigation_synchronous_check">检查更新</string>
    <string name="navigation_synchronous">同步</string>
    <string name="navigation_item3">密码生成</string>
    <string name="navigation_setting">设置</string>
    <string name="navigation_export">导出</string>
    <string name="navigation_autoFill">关闭自动填充</string>
    <string name="navigation_close">关闭指纹登陆</string>
    <string name="button_check">检查更新</string>

    <string name="menu_del">删除</string>
    <string name="menu_add">增加</string>
    <string name="menu_alter">修改</string>

    <string name="update_url">https://upccaishu.top/update/Android</string>
    <string name="update_checking">正在检查更新……</string>
    <string name="generator_generate_again">重新生成密码</string>
    <string name="generator_copy_password">复制密码</string>
    <string name="generator_passwordlength">密码位数</string>
    <string name="generator_setting">设置</string>
    <string name="generator_uppercase">A-Z</string>
    <string name="generator_lowercase">a-z</string>
    <string name="generator_number">0-9</string>
    <string name="generator_symbol"><![CDATA[!@#$%^&*]]></string>

    <string name="button_save">保存</string>
    <string name="textview_name">名称</string>
    <string name="textview_username">用户名</string>
    <string name="textview_password">密码</string>
    <string name="textview_url">URL</string>
    <string name="textview_notes">备注</string>
    <string name="register_e_mail">E-mail地址</string>
    <string name="register_password">主密码</string>
    <string name="register_password_tip">主密码是访问密码库的密码，它非常重要，忘记后将没有办法恢复或者重置，你将不能访问你的密码库！</string>
    <string name="register_password_repeat">重新输入主密码</string>
    <string name="register_password_hint">密码提示（可选）</string>
    <string name="register_password_hit_tip">密码提示可以帮你回忆主密码。</string>
    <string name="register_submit">提交</string>
    <string name="login_email_invalid">邮箱输入有误，请检查输入</string>
    <string name="login_wrong_username_or_password">用户名或密码错误</string>
    <string name="register_email_invalid">输入的邮箱地址不合法</string>
    <string name="register_no_empty_password">主密码不能为空</string>
    <string name="register_no_same_password">两次输入密码不一致</string>
    <string name="login_email">E-mail地址</string>
    <string name="login_password">密码</string>
    <string name="login_submit">登录</string>
    <string name="login_register">注册账户</string>
    <string name="textview_hint_type">请输入记录类型</string>
    <string name="textview_hint_projectname">请输入项目名</string>
    <string name="textview_hint_netaddress">请输入网址</string>
    <string name="textview_hint_username">请输入用户名</string>
    <string name="textview_hint_password">请输入密码</string>
    <string name="textview_hint_notes">备注</string>
    <string name="textview_username_show">用户名</string>
    <string name="textview_password_show">密码</string>
    <string name="textview_url_show">URL</string>
    <string name="copy">复制</string>

    <string name="toolbar_search">搜索</string>
</resources>
