<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/left_navigation_export"
        android:icon="@drawable/left_navigation_export"
        android:title="@string/navigation_export"/>

    <item android:id="@+id/left_navigation_update"
        android:icon="@drawable/left_navigation_update"
        android:title="@string/navigation_synchronous_check"/>

    <item android:id="@+id/left_navigation_close"
        android:icon="@drawable/left_navigation_close"
        android:title="@string/navigation_close"/>

    <item android:id="@+id/left_navigation_autoFill"
        android:icon="@drawable/left_navigation_autofill"
        android:title="@string/navigation_autoFill"/>

    <item android:id="@+id/test"
        android:icon="@drawable/test"
        android:title="test"/>

</menu>