<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="InvalidId"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview_username_show"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/show_username_text"
                android:textSize="15dp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:minHeight="50sp"
                app:layout_constraintTop_toBottomOf="@id/show_username"
                tools:ignore="MissingConstraints"
                android:importantForAutofill="no"/>

            <ImageButton
                android:id="@+id/ImageButton_copy_username"
                android:scaleType="centerInside"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/copy"
                android:cropToPadding="true"
                android:src="@drawable/copy"
                app:layout_constraintTop_toBottomOf="@id/show_username_text"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_username"
        tools:ignore="InvalidId">

        <TextView
            android:id="@+id/show_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview_password_show"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/show_password_text"
                android:textSize="15dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="50sp"
                app:layout_constraintTop_toBottomOf="@id/show_password"
                tools:ignore="MissingConstraints"
                android:importantForAutofill="no"/>

            <ImageButton
                android:id="@+id/ImageButton_copy_password"
                android:scaleType="centerInside"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/copy"
                android:cropToPadding="true"
                android:src="@drawable/copy"
                app:layout_constraintTop_toBottomOf="@id/show_password_text"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="InvalidId">

        <TextView
            android:id="@+id/show_url"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview_url_show"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/show_url_text"
                android:textSize="15dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:minHeight="50sp"
                app:layout_constraintTop_toBottomOf="@id/show_url"
                android:gravity="center_vertical"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="1dp"
                android:importantForAutofill="no"/>

            <ImageButton
                android:id="@+id/ImageButton_copy_url"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/copy"
                android:cropToPadding="true"
                android:src="@drawable/copy"
                app:layout_constraintTop_toBottomOf="@id/show_url_text"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="InvalidId"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show_note"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview_notes"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/show_note_text"
                android:textSize="15dp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:minHeight="50sp"
                app:layout_constraintTop_toBottomOf="@id/show_note"
                tools:ignore="MissingConstraints"
                android:importantForAutofill="no"/>

            <ImageButton
                android:id="@+id/ImageButton_copy_note"
                android:scaleType="centerInside"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/copy"
                android:cropToPadding="true"
                android:src="@drawable/copy"
                app:layout_constraintTop_toBottomOf="@id/show_note_text"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>